# triangulate

./: CMakeLists.txt  calculate.hpp  main.cpp  meson.build  run.sh  shader.frag  triangulate.hpp
